--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/color_grid_style.css">
+	<link rel="stylesheet" type="text/css" href="color_grid_style.css">
 
 </head>
 <body>
@@ -14,6 +14,6 @@
 <button type="button" class="btn btn-info center-inline-block" id="randomColor">Set color</button>
 	<button type="button" class="btn btn-warning center-inline-block" id="eraser">Reset/Erase</button>
 <div class="container"></div>
-<script type="text/javascript" src="/color_grid_query.js"></script>
+<script type="text/javascript" src="color_grid_query.js"></script>
 </body>
 </html>
